Fixed navigation bar to display icons and collapsed menu in column on small screens
Collapsed menu now displays 100% and does not extend brand and links

--- a/client/src/components/Home/home.css
+++ b/client/src/components/Home/home.css
@@ -245,6 +245,11 @@
         min-width: 350px;
     }
 }
+@media screen and (min-width: 400px) and (max-width: 600px){
+    .vara{
+        min-width: 320px;
+    }
+}
 .vara {
     padding-top: 10px;
 }
