--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-html{
+html {
     scroll-behavior: smooth;
 }
 .tsparticles {
     z-index: 0;
 }
-.nav-left{
+.nav-left {
     display: flex;
 }
 @media screen and (min-width: 992px) {
@@ -16,13 +16,13 @@ html{
         flex-direction: row;
     }
 }
-@media screen and (max-width: 991px) and (min-width: 450px) {
+@media screen and (max-width: 991px) and (min-width: 500px) {
     .nav-left {
         margin-bottom: auto;
     }
 }
-@media screen and (max-width: 450px){
-    .nav-left{
+@media screen and (max-width: 500px) {
+    .nav-left {
         display: flex;
         flex-direction: column;
     }
@@ -42,7 +42,7 @@ html{
     max-height: 25px;
 }
 .github-dark {
-   filter: invert(1); 
+    filter: invert(1);
 }
 .editor-container {
     background-color: #333;
@@ -140,13 +140,13 @@ html{
     display: flex;
     flex-direction: column;
 }
-.alert{
+.alert {
     z-index: 3;
     height: 100%;
     width: 100%;
     margin-top: 75px;
 }
-.footer-container{
+.footer-container {
     z-index: 1;
     text-align: center;
     width: 100%;
@@ -157,4 +157,16 @@ html{
 }
 .about-header-container {
     width: 100%;
+}
+.navbar a {
+    padding: clamp(0px, 5px, 25px);
+}
+
+.navbar-nav {
+    margin-right: 2dvw;
+}
+@media screen and (max-width: 500px){
+    .navbar-nav{
+        width: 100%;
+    }
 }
